[package]
name = "ruint2-macro"
description = "The `uint!` macro for `Uint` literals"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
license = "MIT"
rust-version = "1.65"
version = "1.0.3"
edition = "2021"
homepage = "https://github.com/alloy-rs/uint"
repository = "https://github.com/alloy-rs/uint"
keywords = ["uint", "macro"]
categories = ["mathematics"]

[lib]
proc-macro = true

[dev-dependencies]
ruint2 = { path = ".." }

[package.metadata.release]
tag = false
